<resources>
    <!--
    viewtype_location_description for no view binding
    viewtype_description for view binding
    -->

    <string name="textlabel_color_text">Color</string>
    <string name="app_name">Team 8 App</string>

    <!-- Android Manifest Activity labels -->
    <string name="title_androidmanifest_mainactivity">MainActivity</string>
    <string name="title_androidmanifest_authactivity">AuthActivity</string>

    <!-- Login (Sign In) Labels -->
    <string name="edit_email">Enter email</string>
    <string name="edit_password">Enter password</string>
    <string name="button_signin">Sign in</string>
    <string name="button_register">Register</string>
    <string name="button_reset">Forgot Password?</string>
    <string name="button_sendreset">Reset Password</string>
    <string name="switch_signin">Stay logged in</string>

    <!-- Registration fragment -->
    <string name="hint_first">First name</string>
    <string name="hint_last">Last name</string>
    <string name="hint_email">Email</string>
    <string name="hint_nickname">Nickname</string>
    <string name="hint_password_1">Password</string>
    <string name="hint_password_2">Confirm password</string>

    <!-- Auth Navigation Labels -->
    <string name="title_authnav_signin">Sign In</string>
    <string name="title_authnav_register">Register</string>

    <!-- Main Navigation Labels -->
    <string name="title_mainnav_signin">Sign In</string>
    <string name="title_mainnav_register">Register</string>
    <string name="title_mainnav_home">Home</string>
    <string name="title_mainnav_contacts">Contacts</string>
    <string name="title_mainnav_chat">Chat</string>
    <string name="title_mainnav_weather">Weather</string>
    <string name="title_mainnav_contactsearch">Search Contacts</string>
    <string name="title_mainnav_weathermap">Weather Map</string>
    <string name="title_mainnav_10dayforecast">10-Day Forecast</string>
    <string name="title_mainnav_24hourforecast">24-Hour Forecast</string>

    <!-- Bottom Navigation Labels -->
    <string name="title_bottomnav_home">Home</string>
    <string name="title_bottomnav_contacts">Contacts</string>
    <string name="title_bottomnav_chat">Chat</string>
    <string name="title_bottomnav_weather">Weather</string>

    <!-- Home Fragment Labels -->
    <string name="title_home_weather">Weather</string>
    <string name="text_home_weatherlocation">Tacoma, WA</string>
    <string name="text_home_previewweather">Sunny, 85 degrees</string>
    <string name="button_home_expandweather">WEATHER</string>
    <string name="title_home_notifications">Notifications</string>
    <string name="text_home_notifications">2 Notifications</string>
    <string name="text_home_previewnotifications">1 new connection, 1 new message</string>
    <string name="button_home_expandnotifications">NOTIFICATIONS</string>
    <string name="title_home_chats">Recent Chats</string>
    <string name="text_home_chats">Team 8</string>
    <string name="text_home_previewchats">Team 8: "dummy message"</string>
    <string name="button_home_expandchats">CHATS</string>

    <!-- Chat Fragment Labels -->
    <string name="button_chat_newchat">New Chat</string>
    <string name="button_chat_openchat">Open Chat</string>
    <string name="button_chat_send">Send</string>
    <string name="text_chat_header">Chat</string>

    <!-- Chat Post Fragment Labels -->
    <string name="text_chatpost_timedate">[Time and Date of Post]</string>
    <string name="text_chatpost_postcontext">[Post Context]</string>
    <string name="text_chatpost_email">[Email]</string>
    <string name="text_chatpost_name">[Name]</string>
    <string name="text_chatpost_nickname">[Nickname]</string>

    <!-- Chat Card Fragment Labels -->
    <string name="button_chatcard_fullpost">Full Post</string>
    <string name="button_chatcard_readreply">Read/Reply</string>

    <!-- Contacts Fragment Labels -->
    <string name="button_contacts_search">Search</string>
    <string name="text_contacts_header">Contacts</string>

    <!-- Contact Search Fragment Labels -->
    <string name="text_contactsearch_header">Search Contacts</string>
    <string name="hint_contactsearch_email">Email</string>
    <string name="hint_contactsearch_name">Name</string>
    <string name="hint_contactsearch_nickname">Nickname</string>

    <!-- Contact Card Fragment Labels -->
    <string name="text_contactcard_email">[email]</string>
    <string name="text_contactcard_nickname">[nickname]</string>
    <string name="text_contactcard_name">[name]</string>
    <string name="text_contactcard_firstname">[first_name]</string>
    <string name="text_contactcard_lastname">[last_name]</string>
    <string name="button_contactcard_message">Message</string>

    <!-- Weather Main Fragment Labels -->
    <string name="button_weathermain_search">Search</string>
    <string name="hint_weathermain_zipcode">Enter Zipcode</string>
    <string name="text_weathermain_locationtab">Location:</string>
    <string name="text_weathermain_zipcodequeriedlocation">_____</string>
    <string name="button_weathermain_24hourforecast">24-Hour Forecast</string>
    <string name="button_weathermain_5dayforecast">5-Day Forecast</string>
    <string name="button_weathermain_10dayforecast">10-Day Forecast</string>
    <string name="button_weathermain_viewmap">View Map</string>

    <!-- Weather Current Labels -->
    <string name="text_weathercurrent_temperature">Temperature:</string>
    <string name="text_weathercurrent_tempreading">---</string>
    <string name="text_weathercurrent_outlook">Outlook:</string>
    <string name="text_weathercurrent_outlookreading">___</string>
    <string name="text_weathercurrent_humidity">Humidity:</string>
    <string name="text_weathercurrent_humidityreading">___</string>
    <string name="text_weathercurrent_wind">Wind:</string>
    <string name="text_weathercurrent_windreading">___</string>
    <string name="text_weathercurrent_visibility">Visibility:</string>
    <string name="text_weathercurrent_visibilityreading">___</string>

    <!-- Weather Hour Prediction Card Labels -->
    <string name="text_weatherhourcard_hourinterval">[--:-- am/pm]</string>

    <!-- Weather Day Prediction Card Labels -->
    <string name="text_weatherdaycard_specificday">[mm/dd]</string>

    <!-- Weather Day Prediction List Labels -->
    <string name="text_weatherdaylist_city">_____</string>

    <!-- Weather Hour Prediction List Labels -->
    <string name="text_weatherhourlist_city">_____</string>
    <string name="text_weatherhourlist_temperature_reading">___</string>

    <!-- Weather Temp Labels -->
    <string name="text_weathertemp_temperature">Temperature</string>
    <string name="text_weathertemp_temperaturereading">___</string>

    <!-- Weather Temp High and Low Labels -->
    <string name="text_temphighlow_temperature">Temperature</string>
    <string name="text_temphighlow_hightemp">High:</string>
    <string name="text_temphighlow_lowtemp">Low:</string>
    <string name="text_temphighlow_lowtempreading">- -</string>
    <string name="text_temphighlow_hightempreading">- -</string>

    <!-- Weather Outlook Labels -->
    <string name="text_weatheroutlook_outlook"><u>Outlook</u></string>
    <string name="text_weatheroutlook_outlookreading">___</string>

    <!-- Weather Map Labels -->
    <string name="text_weathermap_header">Weather Map</string>

    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="action_link">Goto</string>

    <!-- Strings used for toolbar -->
    <string name="option_toolbar_settings">Settings</string>
    <string name="option_toolbar_signout">Sign Out</string>
    <string name="chat_test">Chat Test</string>

    <!--    Project endpoint-->
    <string name="base_url">https://team8-tcss450-app.herokuapp.com/</string>

    <!-- Strings used for settings -->
    <string name="text_settings_theme">Color Theme:</string>
    <string name="radio_settings_alttheme">Alternate</string>
    <string name="radio_settings_deftheme">Default</string>
    <string name="button_settings_apply">Apply</string>
    <string name="button_settings_changenickname">Change Nickname</string>
    <string name="button_settings_changepassword">Change Password</string>
    <string name="global_chat">Global Chat</string>
    <string name="text_settings_title">Change Password</string>
    <string name="text_settings_email">Confirm Email</string>
    <string name="text_settings_old_password">Current Password</string>
    <string name="text_settings_new_password">New Password</string>
    <string name="text_settings_con_password">Confirm New Password</string>
    <string name="button_settings_update">Update Password</string>
    <string name="title_activity_maps">Map</string>

</resources>