<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/contact_avatar"
        android:layout_width="196dp"
        android:layout_height="196dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_person_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/contact_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_contactcard_nickname"
        android:textAlignment="center"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contact_avatar" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contact_icons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/contact_nickname"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/button_contact_message"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/ic_chat_black_24dp"
            android:clickable="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/button_contact_call"
            app:layout_constraintStart_toStartOf="parent" />

        <ImageView
            android:id="@+id/button_contact_call"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:clickable="true"
            android:src="@drawable/ic_phone_black_24dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button_contact_message" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@+id/contact_icons"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/contact_firstname_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="first name"
            android:textSize="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/contact_firstname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_contactcard_firstname"
            android:textSize="25dp"
            app:layout_constraintTop_toBottomOf="@+id/contact_firstname_subtitle"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/contact_lastname_subtitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="last name"
            android:textSize="20dp"
            app:layout_constraintTop_toBottomOf="@+id/contact_firstname"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/contact_lastname"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/text_contactcard_lastname"
            android:textSize="25dp"
            app:layout_constraintTop_toBottomOf="@+id/contact_lastname_subtitle"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/button_contact_delete"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="Remove contact"
        android:textColor="#FF0000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>